modified:   .sitepins/schema/authors.json 	modified:   LICENSE 	modified:   package.json 	modified:   public/images/logo-darkmode.png 	new file:   public/images/logo-darkmode2.png 	modified:   public/images/logo.png 	new file:   public/images/logo2.png 	new file:   public/images/mapa.png 	new file:   public/images/placeholder2.png 	new file:   public/images/placeholder3.png 	modified:   readme.md 	modified:   src/config/config.json 	modified:   src/config/menu.json 	modified:   src/content.config.ts 	deleted:    src/content/authors/-index.md 	deleted:    src/content/authors/sam-wilson.md 	deleted:    src/content/authors/william-jacob.md 	modified:   src/content/blog/-index.md 	deleted:    src/content/blog/post-2.md 	deleted:    src/content/blog/post-3.md 	deleted:    src/content/blog/post-4.md 	modified:   src/content/homepage/-index.md 	modified:   src/content/pages/privacy-policy.md 	modified:   src/content/sections/call-to-action.md 	modified:   src/content/sections/testimonial.md 	new file:   src/content/team/-index.md 	renamed:    src/content/authors/john-doe.md -> src/content/team/john-doe.md 	modified:   src/layouts/PostSingle.astro 	modified:   src/layouts/components/AuthorCard.astro 	modified:   src/layouts/components/BlogCard.astro 	renamed:    src/pages/authors/[single].astro -> src/pages/team/[single].astro 	renamed:    src/pages/authors/index.astro -> src/pages/team/index.astro

--- a/src/pages/team/[single].astro
+++ b/src/pages/team/[single].astro
@@ -7,12 +7,12 @@ import { getSinglePage } from "@/lib/contentParser.astro";
 import { slugify } from "@/lib/utils/textConverter";
 import { render } from "astro:content";
 
-// get all static paths for authors
+// get all static paths for team
 export async function getStaticPaths() {
-  const COLLECTION_FOLDER = "authors";
-  const authors = await getSinglePage(COLLECTION_FOLDER);
+  const COLLECTION_FOLDER = "team";
+  const team = await getSinglePage(COLLECTION_FOLDER);
 
-  const paths = authors.map((author) => ({
+  const paths = team.map((author) => ({
     params: {
       single: author.id,
     },
