--- a/src/pages/team/index.astro
+++ b/src/pages/team/index.astro
@@ -4,13 +4,13 @@ import Base from "@/layouts/Base.astro";
 import { getListPage, getSinglePage } from "@/lib/contentParser.astro";
 import PageHeader from "@/partials/PageHeader.astro";
 
-const authorIndex = await getListPage("authors", "-index");
+const authorIndex = await getListPage("team", "-index");
 
 if (authorIndex.data.draft) {
   return Astro.redirect("/404");
 }
 
-const authors = await getSinglePage("authors");
+const team = await getSinglePage("team");
 ---
 
 <Base title={authorIndex.data.title}>
@@ -19,7 +19,7 @@ const authors = await getSinglePage("authors");
     <div class="container">
       <div class="row justify-center">
         {
-          authors.map((author) => (
+          team.map((author) => (
             <div class="mb-14 md:col-6 lg:col-4">
               <AuthorCard data={author} />
             </div>
